# NextcloudShareDownloader

./: .gitignore  CMakeLists.txt  LICENSE.md  LICENSE.txt  README.md  Resource.qrc  downloadwidget.cpp  downloadwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagelogger.cpp  messagelogger.h  propfindparser.cpp  propfindparser.h  remotediriterator.cpp  remotediriterator.h
cmake/: DeployQt.cmake  GenerateProductVersion.cmake  VersionResource.rc
translations/: NextcloudShareDownloader_de.ts
